<!--Gireesh Sharma-Singh N01193783 -->
<!--Zhiyuan Hua N01406966-->
<!--Eghe Iyobosa N01107171-->
<!--Supriya N01394695-->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FeelGood</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_2">Find Some Help</string>
    <string name="menu_3">Suicide Prevention</string>
    <string name="menu_4">menu4</string>

    <string name="menu_home">Home page</string>
    <string name="menu_gallery">Create a Journal</string>
    <string name="menu_slideshow">Read Past Journals</string>
    <string name="menu_draw">Draw</string>
    <string name="welcome">WELCOME TO FEEL GOOD</string>
    <string name="youtube">youtube</string>

    <string name="login_email_hint" translatable="false" tools:ignore="MissingTranslation">Email Address</string>
    <string name="login_password_hint" translatable="false" tools:ignore="MissingTranslation">Password</string>
    <string name="or">Or</string>
    <string name="signup">SIGNUP</string>
    <string name="login">LOGIN</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="gender">Phone Number</string>
    <string name="age">Age</string>
    <string name="full_name" translatable="false" tools:ignore="MissingTranslation">Full Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>


    <string name="brightside_text1">What happened today?</string>
    <string name="brightside_text2">Can you write the positives of your situation?</string>
    <string name="brightside_text3">Finish</string>
    <string name="mental_text1">All or Nothing</string>
    <string name="mental_text2">Overgeneralization</string>
    <string name="mental_text3">Catastrophizing</string>
    <string name="mental_text4">Cognitive Distortions</string>
    <string name="mental_text5">TextView</string>
    <string name="mental_text6">Next</string>
    <string name="record_journal_text1">What happened today?</string>
    <string name="record_journal_text2">Next</string>
    <string name="home_text1">Button</string>
    <string name="slideshow_text1">Button</string>
    <string name="customer_revi">custome_rev</string>

    <string name="user_rating">User Rating</string>
    <string name="submit">Submit</string>
    <string name="happybutton">happyButton</string>
    <string name="enter_you_want_to_say">Enter you want to say</string>
    <string name="sadbutton">sadButton</string>
    <string name="remember_me">Remember Me</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="comments">Comments</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="customer_menu">Review</string>
    <string name="draw">Draw</string>
    <string name="tell_metxt" tools:ignore="TypographyEllipsis">Tell me how your day was...</string>
    <string name="b1hom">create</string>
    <string name="b2hom">paint</string>
    <string name="b3hom">diary</string>
    <string name="b4hom">review</string>
    <string name="txthom">For additional resources navigate to the top menu bar to your right.</string>
    <string name="txtfrag">Feel feel to share</string>


    <string name="rate_app_title">Rate App</string>
    <string name="rate_app_message">If you are enjoying our app, please take a moment to rate it on PlayStore. Thanks for your support!</string>
    <string name="rate_btn_pos">Rate Now</string>
    <string name="rate_btn_neg">Remind me later</string>
    <string name="rate_btn_nut">No, Thanks</string>
    <string name="rateapp">Rate App!</string>
    <string name="commentsrev">Comments</string>
    <string name="phonerev">Phone Number</string>
    <string name="emailrev">Email</string>
    <string name="comentsrev">Tell us how we did!</string>
    <string name="txt_acoount">Don\'t have an account?</string>
    <string name="filtering">Filtering</string>
    <string name="label">Labeling</string>
    <string name="discounting">Discounting Positive</string>
    <string name="mireading">Mind Reading</string>
    <string name="chkbox">Fortune Telling</string>
    <string name="chkboxbwhite">Black and White Thinking</string>
    <string name="learn">Learn More</string>
    <string name="textgal">How are you feeling today?</string>
    <string name="txt1slide">I thought i had it under control. I regret not acting sooner. Now it is all lost.</string>
    <string name="txt2slide">I feel sick. It is non ending. How do i find myself.</string>
    <string name="txt3slide">This process is taking too long. I am feeling very vulnerable. I need help.</string>
    <string name="txt4slide">Day 4 on this process. Writring down what i feel everyday as helped me deal with various emotions recently. I think i am being pulled back from the edge.</string>
    <string name="txt5slide">I am getting used to this. Today was a good day. I am happy because i found some closure.</string>
    <string name="txt6slide">I am at day 6 of this week. Looking back to when i started keeping track of the days emotions. I see what am doing wrong.</string>
    <string name="txt7slide">I figured out a way to help myself heal. From now on instaed of meditating on the problem I will actually deal with the problem</string>
    <string name="txt8slide">Was recording your emotions helpful.</string>
    <string name="rev">Review</string>
    <string name="are_there_any_positives_to_your_situation" translatable="false">Are there any positives to your situation?</string>
    <string name="go_to_home_page" translatable="false">Go to home page</string>
</resources>