<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ca.aceapps.it.feelgood.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ca.aceapps.it.feelgood.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ca.aceapps.it.feelgood.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_draw"
        android:name="ca.aceapps.it.feelgood.ui.draw.drawFragment"
        android:label="@string/menu_draw"
        tools:layout="@layout/fragment_draw"/>



    <fragment
        android:id="@+id/nav_customer"
        android:name="ca.aceapps.it.feelgood.ui.customer_review.Customer_reviewFragment"
        android:label="@string/customer_revi"
        tools:layout="@layout/customer_review" />
</navigation>