<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".mainActivity">



    <item
        android:id="@+id/youtube"
        android:orderInCategory="100"
        android:title="@string/youtube"
        app:showAsAction="always|withText"

       android:icon="@drawable/youtube"
        />

    <item
        android:id="@+id/therapist"
        android:orderInCategory="100"
        android:title="@string/menu_2"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu3"
        android:orderInCategory="100"
        android:title="@string/menu_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>