<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homepage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/create_journal"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_draw"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="draw" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/library"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_Customer"
            android:icon="@drawable/customer_rev"
            android:title="@string/customer_menu" />

    </group>
</menu>