<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Banner"
        android:text="@string/app_name"
        android:textSize="60dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="48dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="100dp"/>

    <EditText
    android:id="@+id/ed_username"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/login_email_hint"
    android:layout_marginTop="20dp"
    />
    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="0dp"
        android:text="@string/forget_your_password"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/btn_login"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:textSize="24dp"/>

    <TextView
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:id="@+id/ortextview"
        android:text="@string/or"
        android:textColor="@android:color/black"
        android:layout_marginLeft="210dp"
        android:layout_marginTop="5dp"
        android:textSize="15dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/btn_signup"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="5dp"
        android:text="@string/signup"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:textSize="24dp"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/progressBar"
        android:visibility="visible"
        tools:ignore="MissingConstraints"/>


</LinearLayout>