<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DC858281"
    tools:context=".Review_screen">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_rate_app"
        android:layout_width="175dp"
        android:layout_height="61dp"
        android:layout_marginTop="44dp"
        android:text="@string/rateapp"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="161dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="456dp"
        android:text="@string/commentsrev"
        android:textColor="#171616"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="275dp"
        android:layout_height="65dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="504dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phonerev"
        android:textColor="#0C0C0C"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="272dp"
        android:layout_height="60dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="420dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/emailrev"
        android:textColor="#050505"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="294dp"
        android:layout_height="164dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="136dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textColor="#090909"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@string/comentsrev" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="273dp"
        android:layout_height="72dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:lineSpacingExtra="24sp"
        android:text="Name"
        android:textColor="#151515"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="36dp"
        android:progressTint="#E9FF00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>